Fixed layout on mobile devices

--- a/html/operateShutters.css
+++ b/html/operateShutters.css
@@ -1,5 +1,6 @@
 body {
-    margin:50px !important;
+    margin-top: 15px;
+    margin-bottom: 15px;
     overflow:hidden;
 }
 
@@ -349,17 +350,16 @@ table.table td .save {
 }
 
 .shutterAction {
-	margin:10px;
-	padding: 15px;
-	width: auto;
+	width: 120px;
+	margin:4px;
+	padding: 8px;
 	border: 1px solid;
 	border-color:#cccccc;
 }
 
-.shutterAction .label {
-	width: 60px;
+.shutterAction .name {
 	text-align: center;
-	font-size: 20px;
+	font-size: 16px;
 	font-weight: bold;
 	color: #888888;
 }
